[package]
name = "latency-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.19", features = ["full"]}
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
axum = "0.5"
tower-http = {version = "0.3", features = ["fs"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.5"
once_cell = "1.12"
